--- a/index.html
+++ b/index.html
@@ -94,11 +94,14 @@
     <!-- END MAIN -->
 </div>
 
+<!-- Footer -->
+<!--
 <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-8" style="text-align: center;">
-        <h4>Thanks you</h4>
+        <h4>Thank you</h4>
     </div>
 </footer>
+-->
 
 </body>
 </html>
