--- a/index.html
+++ b/index.html
@@ -82,9 +82,16 @@
     <div class="w3-row w3-padding-64">
         <div class="w3-container">
             <h1 class="w3-text-teal">Team Deliverables</h1>
-            <a href="Preliminary Project Plan 1"></a>
-            Document Link Phase1
+            <a href="https://docs.google.com/document/d/1OdOMlD1nPsk-BUoq06mvam1brwWKp0Vh12adbLQsm_U/edit">
+            Phase1: Project Plan <br>
             </a>
+            <a href="https://docs.google.com/presentation/d/1HPretEklc5eZKitT7ekkcq3a5krveRGs5gmEBYExmxQ/edit?usp=sharing">
+                Phase1: Presentation <br>
+            </a>
+            <a href="https://docs.google.com/document/d/1RwZ4ls7RmO0U0cuTLEVlkN6jrIl95hJDgghk0OsfMX0/edit?usp=sharing">
+                Phase1: Final KWIC Report<br>
+            </a>
+
 
         </div>
 
